Fix code nowrap + add colors class

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -4,6 +4,7 @@
 
 
 code {
+  white-space: nowrap;
   color: $purple;
   padding: .25rem .5rem;
   margin: 0;
@@ -26,6 +27,22 @@ code {
   color: $success!important;
 }
 
+.purple {
+  color: $purple;
+  background-color: $purple-light;
+}
+.blue {
+  color: $blue;
+  background-color: $blue-light;
+}
+.orange {
+  color: $orange;
+  background-color: $orange-light;
+}
+.green {
+  color: $green;
+  background-color: $green-light;
+}
 /* Design styles */
 img {
   max-width: 100%;
